gcc/testsuite/g++.dg/parse/bitfield7.C
struct A
{
  friend int : 1;  // { dg-error "unnamed field" }
};
